--- a/env/.env
+++ b/env/.env
@@ -4,4 +4,7 @@ DB_PASSWORD=
 DB_PORT=3306
 DB_DATABASE=coffco
 SECRET= estoesmuysecreto
-TIME = 24H                
+TIME = 24H
+RECOVERYTIME = 5M
+RECOVERYEMAIL = coffcocontrol@gmail.com
+RECOVERYPASSEMAIL = l i p u l v s w j s q q y u x e        
