--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0"
