--- a/env/.env
+++ b/env/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=miguel
-DB_PASSWORD=123
+DB_USER=root
+DB_PASSWORD=
 DB_PORT=3306
 DB_DATABASE=coffco
 SECRET=estoesmuysecreto
