--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
@@ -15,8 +16,12 @@
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "npm": "^10.9.0",
+    "randomatic": "^3.1.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "shortid": "^2.2.16",
+    "uninstall": "^0.0.0"
   },
   "name": "node",
   "version": "1.0.0",
