--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "shortid": "^2.2.16",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uninstall": "^0.0.0"
   },
   "name": "node",
